Resolved a few spacing issues on landing page

--- a/css/index.css
+++ b/css/index.css
@@ -178,7 +178,7 @@ p {
   top: 0;
 }
 .nav-container #navbar a {
-  padding: 0.5% 3% 0.5% 0;
+  padding: 0.5% 1%;
   padding-top: 1%;
   width: 25%;
 }
@@ -205,7 +205,7 @@ form {
   max-width: 800px;
   text-align: center;
   margin: 20px auto;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
 }
 form input,
 form textarea {
@@ -216,7 +216,6 @@ form textarea {
   display: block;
   width: 100%;
   height: 43px;
-  margin-top: 1em;
   font-family: 'Varela Round', sans-serif;
   font-size: 1.5rem;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -270,6 +269,7 @@ form textarea {
 }
 footer {
   display: block;
+  width: 100%;
   color: white;
   background: black;
   padding: 20px 0;
@@ -320,6 +320,7 @@ footer p {
   color: white;
   font-family: 'Varela Round', sans-serif;
   letter-spacing: 0.15rem;
+  padding: 0.25% 0;
 }
 #home .main-header .buttons {
   display: flex;
@@ -396,7 +397,14 @@ footer p {
   align-items: flex-start;
   margin: 3% auto;
 }
+.section1-container .box-container :hover {
+  background-color: #dbdbdb;
+  -webkit-transition: background-color 500ms linear;
+  -ms-transition: background-color 500ms linear;
+  transition: background-color 500ms linear;
+}
 .section1-container .box-container .box {
+  display: block;
   width: 30%;
   text-align: center;
   padding: 40px 20px;
@@ -487,12 +495,58 @@ footer p {
   margin-bottom: 8%;
   border-radius: 10px;
 }
-.team-nav {
-  background-color: black;
-  position: top;
-}
 #team-header {
-  width: 100%;
-  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  max-width: 100%;
+  position: scroll;
+}
+#team-header .bg-img {
+  min-height: 720px;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  position: absolute;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  display: block;
+}
+#team-header .team-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-around;
+  text-align: center;
+  margin: 15% 0;
+}
+#team-header .team-header h1 {
+  font-size: 5.5rem;
+  color: white;
+  margin: 0.5% auto;
+}
+#team-header .team-header h3 {
+  font-size: 2.4rem;
+  color: white;
+  font-family: 'Varela Round', sans-serif;
+  letter-spacing: 0.15rem;
+  padding: 0.25% 0;
+}
+#team-header .team-header img {
+  width: 15%;
+  margin: 1.5% auto;
+  filter: invert(1);
+}
+.team-sec1 {
+  width: 90%;
   margin: 10% auto;
+}
+.team-sec1 p {
+  margin-bottom: 10%;
 }
