--- a/less/contact.less
+++ b/less/contact.less
@@ -2,7 +2,7 @@ form {
     max-width: 800px;
     text-align: center;
     margin: 20px auto;
-    padding-bottom: 2%;
+    padding-bottom: 1%;
     input, textarea {
         border: 1px solid #EEE;
         outline:0;
@@ -11,7 +11,6 @@ form {
         display: block;
         width: 100%;
         height: 43px;
-        margin-top: 1em;
         font-family: 'Varela Round', sans-serif;
         font-size: 1.5rem;
         box-shadow: 0 2px 2px rgba(black, 0.1);
