--- a/less/footer.less
+++ b/less/footer.less
@@ -2,6 +2,7 @@
 
 footer {
   display:block;
+  width: 100%;
   color: white;
   background: black;
   padding: 20px 0;
