--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,7 @@
         position: absolute;
         top: 0;
         a {
-            padding: 0.5% 3% 0.5% 0;
+            padding: 0.5% 1%;
             padding-top: 1%;
             width: 25%;
             h2 {
